--- a/TatoodoAssignment/Scenes/Tatoo/Tattoo.storyboard
+++ b/TatoodoAssignment/Scenes/Tatoo/Tattoo.storyboard
@@ -8,17 +8,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tattoo List View Controller-->
+        <!--Posts List View Controller-->
         <scene sceneID="MKn-L6-n9O">
             <objects>
-                <viewController storyboardIdentifier="TattooListViewController" id="ktQ-1h-gVE" customClass="TattooListViewController" customModule="TatoodoAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PostsListViewController" id="ktQ-1h-gVE" customClass="PostsListViewController" customModule="TatoodoAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="D8U-Vr-rUs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mjZ-fE-OkP">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mjZ-fE-OkP">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ktQ-1h-gVE" id="hdE-E9-8OM"/>
+                                    <outlet property="delegate" destination="ktQ-1h-gVE" id="9wr-5e-bFr"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
